BH-4879 Added CLP core changes after backmerge

--- a/components/core/CMakeLists.txt
+++ b/components/core/CMakeLists.txt
@@ -357,8 +357,16 @@ set(SOURCE_FILES_clg
         src/clg/clg.cpp
         src/clg/CommandLineArguments.cpp
         src/clg/CommandLineArguments.hpp
+        src/clg/ControllerMonitoringThread.cpp
+        src/clg/ControllerMonitoringThread.hpp
         src/database_utils.cpp
         src/database_utils.hpp
+        src/networking/socket_utils.cpp
+        src/networking/socket_utils.hpp
+        src/networking/SocketOperationFailed.cpp
+        src/networking/SocketOperationFailed.hpp
+        src/Thread.cpp
+        src/Thread.hpp
         src/Defs.h
         src/dictionary_utils.cpp
         src/dictionary_utils.hpp
@@ -643,6 +651,10 @@ set(SOURCE_FILES_unitTest
         src/clp/FileToCompress.hpp
         src/clp/run.cpp
         src/clp/run.hpp
+        src/networking/socket_utils.cpp
+        src/networking/socket_utils.hpp
+        src/networking/SocketOperationFailed.cpp
+        src/networking/SocketOperationFailed.hpp
         src/clp/StructuredFileToCompress.hpp
         src/clp/utils.cpp
         src/clp/utils.hpp
